fix repo title, fork icon alignment

--- a/resource/index.css
+++ b/resource/index.css
@@ -345,6 +345,10 @@ a {
   line-height: 36px;
 
   color: var(--text-primary);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .repo-desc {
